src/test/deca/context/valid/while.deca
// Description:
//    Tester le fonctionnement de while
//
// Resultats:
//    TEST PASS
//
// Historique:
//    cree le 01/01/2023

{
        int a=0;
        float b =7.7;
        boolean boo=true;
        boo=true;
        while (a<100){
                print(b);
                boo = false;
                a=a+78;
                a = a*1;
                while (a<6){
                        a = a-6;
                }
                while (true||false){

                }
        }

        //bug pour le type boolean
        //while (boo!=true){
        //        print(b);
        //        boo = false;
        //        a=a+78;
        //        a = a*1;
        //        
        //}

}